--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,29 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  package="org.kulabukhov.android.apptemplate">
+    package="org.kulabukhov.android.apptemplate" >
 
-	<application android:allowBackup="true"
-				 android:label="@string/app_name"
-				 android:icon="@mipmap/ic_launcher"
-				 android:theme="@style/AppTheme">
+    <uses-permission android:name="android.permission.INTERNET" />
 
-	</application>
+    <application
+        android:name=".components.ApplicationContext"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+
+        <activity
+            android:name=".components.MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="380a480cc1775b221d727bbb218895aa434d0a96" />
+    </application>
 
 </manifest>
