--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 }
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
+apply from: '../config/quality.gradle'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
