--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 apply plugin: 'jacoco'
 apply from: '../config/quality.gradle'
+apply from: '../config/jacoco-support.gradle'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -60,17 +61,6 @@ android {
 			testCoverageEnabled = true
 		}
 	}
-
-	/*sourceSets {
-		androidTest {
-// include library sources into tests
-			java.srcDirs android.sourceSets.main.java.srcDirs
-		}
-
-		debug.setRoot('build-types/debug')
-		release.setRoot('build-types/release')
-	}
-	*/
 }
 
 dependencies {
@@ -87,20 +77,16 @@ dependencies {
 	compile 'com.jakewharton.timber:timber:2.5.1'
 	compile 'com.squareup.okhttp:okhttp:2.4.0'
 
+	debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+	releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+
 	// Testing-only dependencies
 	androidTestCompile 'com.android.support.test:runner:0.3'
-	//androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
 	androidTestCompile 'com.android.support.test:rules:0.3'
 	androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
 	androidTestCompile 'com.android.support:appcompat-v7:22.2.0'
 
 }
-
-/*jacoco {
-	toolVersion = "0.7.0.201403182114"
-}*/
-
-apply from: '../config/jacoco-support.gradle'
 
 
 
