--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 		exclude 'META-INF/ASL2.0'
 		exclude 'META-INF/LICENSE'
 		exclude 'META-INF/NOTICE'
+		exclude 'META-INF/services/javax.annotation.processing.Processor'
 	}
 
 	defaultConfig {
@@ -43,6 +44,7 @@ android {
 
 	lintOptions {
 		abortOnError false
+		disable 'InvalidPackage'
 	}
 
 	jacoco {
@@ -65,7 +67,8 @@ android {
 
 dependencies {
 	compile fileTree(include: ['*.jar'], dir: 'libs')
-	compile 'com.android.support:appcompat-v7:22.2.0'
+	compile 'com.android.support:appcompat-v7:22.2.1'
+	compile 'com.android.support:design:22.2.1'
 	compile 'org.jetbrains:annotations:13.0'
 	compile('com.crashlytics.sdk.android:crashlytics:2.4.0@aar') {
 		transitive = true;
@@ -84,7 +87,7 @@ dependencies {
 	androidTestCompile 'com.android.support.test:runner:0.3'
 	androidTestCompile 'com.android.support.test:rules:0.3'
 	androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
-	androidTestCompile 'com.android.support:appcompat-v7:22.2.0'
+	androidTestCompile 'com.android.support:appcompat-v7:22.2.1'
 
 }
 
