--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,11 @@ android {
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 		}
 		debug {
+			testCoverageEnabled = false
+		}
+
+		debugCoverage.initWith(buildTypes.debug)
+		debugCoverage {
 			testCoverageEnabled = true
 		}
 	}
@@ -77,7 +82,12 @@ dependencies {
 	compile 'com.jakewharton.timber:timber:2.5.1'
 	compile 'com.squareup.okhttp:okhttp:2.4.0'
 
+	compile 'io.reactivex:rxandroid:1.0.1'
+	// compile 'com.jakewharton.rxbinding:rxbinding:0.2.0'
+	// see https://github.com/JakeWharton/RxBinding
+
 	debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+	debugCoverageCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
 	releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
 
 	// Testing-only dependencies
