--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ repositories {
 
 
 android {
-	compileSdkVersion 22
-	buildToolsVersion "22.0.1"
+	compileSdkVersion 23
+	buildToolsVersion "23.0.0"
 
 	packagingOptions {
 		exclude 'LICENSE.txt'
@@ -33,7 +33,7 @@ android {
 
 	defaultConfig {
 		applicationId "org.kulabukhov.android.apptemplate"
-		minSdkVersion 10
+		minSdkVersion 14
 		targetSdkVersion 22
 		versionCode 1
 		versionName "1.0"
@@ -70,12 +70,14 @@ android {
 
 dependencies {
 	compile fileTree(include: ['*.jar'], dir: 'libs')
-	compile 'com.android.support:appcompat-v7:22.2.0'
+	compile 'com.android.support:appcompat-v7:23.0.0'
 	compile 'org.jetbrains:annotations:13.0'
 	compile('com.crashlytics.sdk.android:crashlytics:2.4.0@aar') {
 		transitive = true;
 	}
-	compile 'org.kulabukhov:android-commons:0.1.8'
+	compile ('org.kulabukhov:android-commons:0.1.8') {
+		transitive = true;
+	}
 	compile 'com.fasterxml.jackson.core:jackson-core:2.4.0'
 	compile 'com.fasterxml.jackson.core:jackson-annotations:2.4.0'
 	compile 'com.fasterxml.jackson.core:jackson-databind:2.4.0'
@@ -83,7 +85,8 @@ dependencies {
 	compile 'com.squareup.okhttp:okhttp:2.4.0'
 
 	compile 'io.reactivex:rxandroid:1.0.1'
-	// compile 'com.jakewharton.rxbinding:rxbinding:0.2.0'
+	compile 'com.jakewharton.rxbinding:rxbinding:0.2.0'
+	compile 'com.jakewharton.rxbinding:rxbinding-appcompat-v7:0.2.0'
 	// see https://github.com/JakeWharton/RxBinding
 
 	debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
@@ -94,7 +97,7 @@ dependencies {
 	androidTestCompile 'com.android.support.test:runner:0.3'
 	androidTestCompile 'com.android.support.test:rules:0.3'
 	androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
-	androidTestCompile 'com.android.support:appcompat-v7:22.2.0'
+	androidTestCompile 'com.android.support:appcompat-v7:23.0.0'
 
 }
 
