--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,8 @@ allprojects {
 	repositories {
 		jcenter()
 	}
+	configurations.all {
+		resolutionStrategy.force 'com.android.support:support-annotations:23.0.0'
+		//resolutionStrategy.force 'com.android.support:support-appcompat-v7:22.2.0'
+	}
 }
