--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,22 +1,26 @@
 buildscript {
     repositories {
         maven { url 'https://maven.fabric.io/public' }
+		mavenCentral()
     }
 
     dependencies {
         classpath 'io.fabric.tools:gradle:1.+'
+		classpath 'me.tatarka:gradle-retrolambda:3.2.2'
     }
 }
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
+apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'jacoco'
 apply from: '../config/quality.gradle'
 apply from: '../config/jacoco-support.gradle'
+apply from: '../config/retrolambda.gradle'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+	mavenCentral()
 }
-
 
 android {
 	compileSdkVersion 23
@@ -43,6 +47,11 @@ android {
 
 	lintOptions {
 		abortOnError false
+	}
+
+	compileOptions {
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
 	}
 
 	jacoco {
