--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,10 +12,10 @@ buildscript {
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'jacoco'
-apply from: '../config/quality.gradle'
-apply from: '../config/jacoco-support.gradle'
-apply from: '../config/retrolambda.gradle'
+//apply plugin: 'jacoco'
+//apply from: '../config/quality.gradle'
+//apply from: '../config/jacoco-support.gradle'
+//apply from: '../config/retrolambda.gradle'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -23,8 +23,8 @@ repositories {
 }
 
 android {
-	compileSdkVersion 23
-	buildToolsVersion "23.0.0"
+	compileSdkVersion 25
+	buildToolsVersion "25.0.0"
 
 	packagingOptions {
 		exclude 'LICENSE.txt'
@@ -37,7 +37,7 @@ android {
 
 	defaultConfig {
 		applicationId "org.kulabukhov.android.apptemplate"
-		minSdkVersion 14
+		minSdkVersion 16
 		targetSdkVersion 22
 		versionCode 1
 		versionName "1.0"
@@ -54,12 +54,12 @@ android {
 		targetCompatibility JavaVersion.VERSION_1_8
 	}
 
-	jacoco {
+	/*jacoco {
 		//bug in code coverage with espresso 2.1:
 		//https://code.google.com/p/android/issues/detail?id=170607
 		// http://search.maven.org/remotecontent?filepath=org/jacoco/jacoco/0.7.5.201505241946/jacoco-0.7.5.201505241946.zip
 		version "0.7.5.201505241946"
-	}
+	}*/
 
 	buildTypes {
 		release {
@@ -79,8 +79,8 @@ android {
 
 dependencies {
 	compile fileTree(include: ['*.jar'], dir: 'libs')
-	compile 'com.android.support:appcompat-v7:23.0.0'
-	compile 'org.jetbrains:annotations:13.0'
+	compile 'com.android.support:appcompat-v7:25.0.0'
+	compile 'com.android.support:support-annotations:25.0.0'
 	compile('com.crashlytics.sdk.android:crashlytics:2.4.0@aar') {
 		transitive = true;
 	}
@@ -90,23 +90,24 @@ dependencies {
 	compile 'com.fasterxml.jackson.core:jackson-core:2.4.0'
 	compile 'com.fasterxml.jackson.core:jackson-annotations:2.4.0'
 	compile 'com.fasterxml.jackson.core:jackson-databind:2.4.0'
-	compile 'com.jakewharton.timber:timber:2.5.1'
-	compile 'com.squareup.okhttp:okhttp:2.4.0'
+	compile 'com.jakewharton.timber:timber:4.3.1'
+	compile 'com.squareup.okhttp3:okhttp:3.4.2'
 
-	compile 'io.reactivex:rxandroid:1.0.1'
-	compile 'com.jakewharton.rxbinding:rxbinding:0.2.0'
-	compile 'com.jakewharton.rxbinding:rxbinding-appcompat-v7:0.2.0'
-	// see https://github.com/JakeWharton/RxBinding
+	compile 'io.reactivex:rxandroid:1.2.1'
+	compile 'io.reactivex:rxjava:1.2.2'
+	// see https://github.com/JakeWharton/RxBindings
+	compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+	compile 'com.jakewharton.rxbinding:rxbinding-appcompat-v7:0.4.0'
 
-	debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
-	debuggableCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
-	releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+	//debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+	//debuggableCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+	//releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
 
 	// Testing-only dependencies
-	androidTestCompile 'com.android.support.test:runner:0.3'
-	androidTestCompile 'com.android.support.test:rules:0.3'
-	androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
-	androidTestCompile 'com.android.support:appcompat-v7:23.0.0'
+	androidTestCompile 'com.android.support.test:runner:0.5'
+	androidTestCompile 'com.android.support.test:rules:0.5'
+	androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+	androidTestCompile 'com.android.support:appcompat-v7:25.0.0'
 
 }
 
