--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
 		jcenter()
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:1.2.3'
+		classpath 'com.android.tools.build:gradle:2.2.2'
 
 		// NOTE: Do not place your application dependencies here; they belong
 		// in the individual module build.gradle files
@@ -17,7 +17,11 @@ allprojects {
 		jcenter()
 	}
 	configurations.all {
-		resolutionStrategy.force 'com.android.support:support-annotations:23.0.0'
+		//resolutionStrategy.force 'com.android.support:support-annotations:23.0.0'
 		//resolutionStrategy.force 'com.android.support:support-appcompat-v7:22.2.0'
 	}
+}
+
+task clean(type: Delete) {
+	delete rootProject.buildDir
 }
