--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,16 +6,12 @@ buildscript {
 
     dependencies {
         classpath 'io.fabric.tools:gradle:1.+'
-		classpath 'me.tatarka:gradle-retrolambda:3.2.2'
     }
 }
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
-apply plugin: 'me.tatarka.retrolambda'
-//apply plugin: 'jacoco'
 //apply from: '../config/quality.gradle'
 //apply from: '../config/jacoco-support.gradle'
-//apply from: '../config/retrolambda.gradle'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -23,8 +19,8 @@ repositories {
 }
 
 android {
-	compileSdkVersion 25
-	buildToolsVersion "25.0.0"
+	compileSdkVersion rootProject.ext.compileSdkVersion
+	buildToolsVersion rootProject.ext.buildToolsVersion
 
 	packagingOptions {
 		exclude 'LICENSE.txt'
@@ -43,6 +39,10 @@ android {
 		versionName "1.0"
 
 		testInstrumentationRunner "org.kulabukhov.android.espressotestcoverage.AndroidJacocoTestRunner"
+
+		jackOptions {
+			enabled true
+		}
 	}
 
 	lintOptions {
@@ -53,13 +53,6 @@ android {
 		sourceCompatibility JavaVersion.VERSION_1_8
 		targetCompatibility JavaVersion.VERSION_1_8
 	}
-
-	/*jacoco {
-		//bug in code coverage with espresso 2.1:
-		//https://code.google.com/p/android/issues/detail?id=170607
-		// http://search.maven.org/remotecontent?filepath=org/jacoco/jacoco/0.7.5.201505241946/jacoco-0.7.5.201505241946.zip
-		version "0.7.5.201505241946"
-	}*/
 
 	buildTypes {
 		release {
@@ -79,35 +72,34 @@ android {
 
 dependencies {
 	compile fileTree(include: ['*.jar'], dir: 'libs')
-	compile 'com.android.support:appcompat-v7:25.0.0'
-	compile 'com.android.support:support-annotations:25.0.0'
-	compile('com.crashlytics.sdk.android:crashlytics:2.4.0@aar') {
+	compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+	compile "com.android.support:support-annotations:${rootProject.ext.supportLibVersion}"
+	compile("com.crashlytics.sdk.android:crashlytics:2.4.0@aar") {
 		transitive = true;
 	}
 	compile ('org.kulabukhov:android-commons:0.1.8') {
 		transitive = true;
 	}
+
 	compile 'com.fasterxml.jackson.core:jackson-core:2.4.0'
 	compile 'com.fasterxml.jackson.core:jackson-annotations:2.4.0'
 	compile 'com.fasterxml.jackson.core:jackson-databind:2.4.0'
 	compile 'com.jakewharton.timber:timber:4.3.1'
-	compile 'com.squareup.okhttp3:okhttp:3.4.2'
+	compile 'com.squareup.okhttp3:okhttp:3.6.0'
 
 	compile 'io.reactivex:rxandroid:1.2.1'
-	compile 'io.reactivex:rxjava:1.2.2'
+	compile 'io.reactivex:rxjava:1.2.7'
 	// see https://github.com/JakeWharton/RxBindings
 	compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
 	compile 'com.jakewharton.rxbinding:rxbinding-appcompat-v7:0.4.0'
+	compile 'nl.littlerobots.rxlint:rxlint:1.0'
 
-	//debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
-	//debuggableCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
-	//releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
 
 	// Testing-only dependencies
 	androidTestCompile 'com.android.support.test:runner:0.5'
 	androidTestCompile 'com.android.support.test:rules:0.5'
 	androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-	androidTestCompile 'com.android.support:appcompat-v7:25.0.0'
+	androidTestCompile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
 
 }
 
