--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
 		jcenter()
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:2.2.2'
+		classpath 'com.android.tools.build:gradle:2.3.0'
 
 		// NOTE: Do not place your application dependencies here; they belong
 		// in the individual module build.gradle files
@@ -25,3 +25,14 @@ allprojects {
 task clean(type: Delete) {
 	delete rootProject.buildDir
 }
+
+ext {
+	// The following are only a few examples of the types of properties you can define.
+	compileSdkVersion = 25
+	buildToolsVersion = "25.0.2"
+
+	// You can also use this to specify versions for dependencies. Having consistent
+	// versions between modules can avoid behavior conflicts.
+	supportLibVersion = "25.3.0"
+}
+
