--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,13 +32,11 @@ android {
 	}
 
 	defaultConfig {
-		applicationId "org.kulabukhov.android.apptemplate"
+		applicationId "org.kulabukhov.android"
 		minSdkVersion 16
 		targetSdkVersion 22
 		versionCode 1
 		versionName "1.0"
-
-		testInstrumentationRunner "org.kulabukhov.android.espressotestcoverage.AndroidJacocoTestRunner"
 
 		jackOptions {
 			enabled true
