--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,14 +5,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".components.ApplicationContext"
+        android:name="org.kulabukhov.android.components.ApplicationContext"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
         <activity
-            android:name=".components.MainActivity"
+            android:name="org.kulabukhov.android.components.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop">
             <intent-filter>
